<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.zahid.otpview.A" />
        <variable
            name="listener"
            type="com.brainx.clientdex.activity.AuthenticatorActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/auth_bg"
        tools:context=".activity.AuthenticatorActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_via_authenticator_app"
                    android:gravity="center"
                    android:textColor="@color/auth_text_color_title"
                    android:textSize="18sp"
                    android:padding="@dimen/dp_16"
                    android:background="@color/auth_bg_title"
                    >

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#BECAD6"
                    >

                </View>

                <TextView
                    android:id="@+id/tvMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_verification_code_from_authenticator_app"
                    android:gravity="center"
                    android:textColor="@color/auth_text_color_msg"
                    android:textSize="16sp"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="24dp"
                    >

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="9dp"
                    android:weightSum="6"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/etOPT1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:layout_weight="1"
                        android:textCursorDrawable="@null"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:text="@={viewModel.optField1}"
                        android:gravity="center"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                    <EditText
                        android:id="@+id/etOPT2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:textCursorDrawable="@null"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="@={viewModel.optField2}"
                        android:textColor="@color/auth_text_color_title"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                    <EditText
                        android:id="@+id/etOPT3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:textCursorDrawable="@null"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:text="@={viewModel.optField3}"
                        android:gravity="center"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                    <EditText
                        android:id="@+id/etOPT4"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:textCursorDrawable="@null"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@={viewModel.optField4}"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                    <EditText
                        android:id="@+id/etOPT5"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textCursorDrawable="@null"
                        android:text="@={viewModel.optField5}"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                    <EditText
                        android:id="@+id/etOPT6"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginHorizontal="6dp"
                        android:textCursorDrawable="@null"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@={viewModel.optField6}"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:background="@drawable/opt_field_background_normal"
                        >

                    </EditText>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="01:00"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/auth_text_color_msg"
                    android:textSize="18sp"
                    android:paddingHorizontal="25dp"
                    android:layout_marginTop="24dp"
                    >

                </TextView>
                <LinearLayout
                    android:id="@+id/lyResend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvMsgResend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/haven_t_received_the_code"
                        android:gravity="center"
                        android:textColor="@color/auth_text_color_msg"
                        android:textSize="16sp"
                        android:layout_marginTop="24dp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/tvResend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend"
                        android:gravity="center"
                        android:textColor="@color/auth_text_blue"
                        android:textSize="16sp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        >

                    </TextView>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="127dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/rounded_background"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:onClick="@{()->listener.verify()}"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvHavingProblem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/having_problems"
                    android:gravity="center"
                    android:textColor="@color/auth_text_color_msg"
                    android:textSize="16sp"
                    android:paddingHorizontal="25dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    >

                </TextView>
                <TextView
                    android:id="@+id/tvChage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_code_via_sms"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:onClick="@{()->listener.onChangeView()}"
                    android:textColor="@color/auth_text_blue"
                    android:textSize="16sp"
                    android:paddingHorizontal="25dp"
                    >

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>